Closed
Bug 225986
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for libjar files
Categories
(Core Graveyard :: Installer: XPInstall Engine, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
1.05 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libjar/nsJAR.cpp&rev=1.108&mark=768#763
Deref-error: "curItemMF"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libjar/nsJAR.cpp&rev=1.108&mark=771#766
Deref-error: "curItemMF"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libjar/nsJAR.cpp&rev=1.108&mark=795#790
Deref-error: "curItemMF"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libjar/nsJAR.cpp&rev=1.108&mark=797#792
Deref-error: "curItemMF"
Attachment #135730 -
Flags: superreview?(roc)
Attachment #135730 -
Flags: review?(roc)
Attachment #135730 -
Flags: superreview?(roc)
Attachment #135730 -
Flags: superreview+
Attachment #135730 -
Flags: review?(roc)
Attachment #135730 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•