Bug 225986 DRefTool analysis for libjar files r=roc sr=roc